--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "test": "jest --runInBand"
   },
   "dependencies": {
+    "bcrypt": "^4.0.1",
     "cookie-parser": "~1.4.4",
     "debug": "~2.6.9",
     "express": "~4.16.1",
@@ -17,7 +18,7 @@
     "faker": "^4.1.0",
     "http-errors": "^1.7.3",
     "lowdb": "^1.0.0",
-    "mongoose": "^5.7.5",
+    "mongoose": "^5.7.1",
     "morgan": "~1.9.1"
   },
   "devDependencies": {
